通视分析交互优化

--- a/resources/codes/analysis/cut.html
+++ b/resources/codes/analysis/cut.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>剖面分析</title>
+    <title>平面裁剪</title>
     <style type="text/css">
       html,
       body {
