:bento:修复带文字的图片标注例子资源路径问题

--- a/resources/codes/vectorLayer/pointLayer/imageTextMarker.html
+++ b/resources/codes/vectorLayer/pointLayer/imageTextMarker.html
@@ -58,7 +58,7 @@
         },
         symbol: [
           {
-            markerFile: "resources/markers/3.png",
+            markerFile: "/resources/markers/3.png",
             markerWidth: 28,
             markerHeight: 40,
           },
