--- a/resources/codes/gltfLayer/gltfMarker/setAltitude.html
+++ b/resources/codes/gltfLayer/gltfMarker/setAltitude.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>控制模型的平移、旋转、缩放</title>
+    <title>为GLTFMarker设置高度</title>
     <style type="text/css">
       html,
       body {
@@ -14,19 +14,6 @@
         width: 100%;
         height: 100%;
       }
-
-      #info {
-        position: fixed;
-        background-color: rgba(13, 13, 13, 0.5);
-        padding: 10px 10px 10px 10px;
-        font: 13px bold sans-serif;
-        color: #fff;
-        left: 0px;
-        top: 0px;
-        width: 100%;
-        height: 50px;
-        overflow: hidden;
-      }
     </style>
     <link
       rel="stylesheet"
@@ -37,8 +24,8 @@
       src="https://maptalks.com/api/maptalks.min.js"
     ></script>
     <script
-      type="text/javascript"
-      src="https://maptalks.com/api/maptalks-gl-layers.js"
+    type="text/javascript"
+    src="https://maptalks.com/api/maptalks-gl-layers.js"
     ></script>
     <script
       type="text/javascript"
@@ -48,7 +35,6 @@
 
   <body>
     <div id="map" class="container"></div>
-    <div id="info"></div>
     <script>
       const map = new maptalks.Map("map", {
         center: [-0.113049, 51.498568],
@@ -112,39 +98,16 @@
         sceneConfig,
       }).addTo(map);
 
-      const transformControl = new maptalks.TransformControl();
-      transformControl.addTo(map);
-      transformControl.on("transforming", (e) => {
-        const target = transformControl.getTransformTarget();
-        target.setTRS(e.translate, e.rotation, e.scale);
-      });
-
-      transformControl.on("positionchange", (e) => {
-        const target = transformControl.getTransformTarget();
-        target.setCoordinates(e.coordinate);
-      });
-
-      transformControl.on("transformend", (e) => {
-        document.getElementById("info").innerHTML = "操控模型完成事件";
-      });
-
-      map.on("dom:click", (e) => {
-        const identifyData = e.coordinate
-          ? groupGLLayer.identify(e.coordinate, {
-              layers: [gltfLayer],
-              orderByCamera: true,
-            })[0]
-          : groupGLLayer.identifyAtPoint(e.containerPoint, {
-              layers: [gltfLayer],
-              orderByCamera: true,
-            })[0];
-        const target = identifyData && identifyData.data;
-        if (target) {
-          transformControl.enable();
-          transformControl.transform(target);
-        } else {
-          transformControl.disable();
-        }
+      const gui = new dat.GUI({ width: 250 });
+      const Config = function () {
+        this.altitude = 0;
+      };
+      const options = new Config();
+      const altitudeController = gui.add(options, "altitude", 0, 1000);
+      altitudeController.onChange(function (value) {
+        const coordinate = gltfMarker.getCoordinates();
+        coordinate.z = value;
+        gltfMarker.setCoordinates(coordinate);
       });
     </script>
   </body>
