解决点中没有模型的地方无法进行分析的问题

--- a/resources/codes/analysis/viewshed.html
+++ b/resources/codes/analysis/viewshed.html
@@ -205,6 +205,8 @@
           const altitude = map.pointAtResToAltitude(pickedPoint[2], map.getGLRes());
           const coordinate = map.pointAtResToCoordinate(new maptalks.Point(pickedPoint[0], pickedPoint[1]), map.getGLRes());
           return new maptalks.Coordinate(coordinate.x, coordinate.y, altitude);
+        } else {
+          return coordinate;
         }
       }
 
