--- a/resources/codes/analysis/insight.html
+++ b/resources/codes/analysis/insight.html
@@ -201,6 +201,8 @@
           const altitude = map.pointAtResToAltitude(pickedPoint[2], map.getGLRes());
           const coordinate = map.pointAtResToCoordinate(new maptalks.Point(pickedPoint[0], pickedPoint[1]), map.getGLRes());
           return new maptalks.Coordinate(coordinate.x, coordinate.y, altitude);
+        } else {
+          return coordinate;
         }
       }
       // dat gui 创建代码
