更新gltflayer相关的示例

--- a/resources/codes/gltfLayer/gltfMarker/animation.html
+++ b/resources/codes/gltfLayer/gltfMarker/animation.html
@@ -91,6 +91,7 @@
       const url = "/resources/gltf/Fox/Fox.gltf";
       const symbol = {
         url: url,
+        shader: 'pbr',
         shadow: true,
         animation: options.animation,
         animationName: options.animationList, //first animation default
