--- a/resources/codes/gltfLayer/gltfMarker/setAnimationTimeFrame.html
+++ b/resources/codes/gltfLayer/gltfMarker/setAnimationTimeFrame.html
@@ -143,9 +143,7 @@
       }).addTo(map);
 
       function setAnimationTimeFrame() {
-        gltfMarker.setAnimationTimeframe(1000); //ms
-        const renderer = gltfLayer.getRenderer();
-        const meshes = renderer.getMarkerMeshes(gltfMarker);
+        const meshes = gltfMarker.getMeshes(null, null, 1000);
         const nodeMatrix = meshes[0].nodeMatrix;
         document.getElementById("info").innerHTML = "矩阵:[" + nodeMatrix + "]";
       }
