--- a/resources/codes/gltfLayer/gltfMarker/trs.html
+++ b/resources/codes/gltfLayer/gltfMarker/trs.html
@@ -89,9 +89,9 @@
         this.rotationX = 0;
         this.rotationY = 0;
         this.rotationZ = 0;
-        this.scaleX = 2;
-        this.scaleY = 2;
-        this.scaleZ = 2;
+        this.scaleX = 1;
+        this.scaleY = 1;
+        this.scaleZ = 1;
       };
       const options = new Config();
       const url = "/resources/gltf/alien/alien.glb";
@@ -122,41 +122,41 @@
       const transControllerX = translation.add(
         options,
         "translationX",
-        -10,
-        10
+        -100,
+        100
       );
       transControllerX.onChange(function (value) {
-        gltfMarker.setTranslation([
+        gltfMarker.setTranslation(
           value,
           transControllerY.getValue(),
           transControllerZ.getValue(),
-        ]);
+        );
       });
       const transControllerY = translation.add(
         options,
         "translationY",
-        -10,
-        10
+        -100,
+        100
       );
       transControllerY.onChange(function (value) {
-        gltfMarker.setTranslation([
+        gltfMarker.setTranslation(
           transControllerX.getValue(),
           value,
           transControllerZ.getValue(),
-        ]);
+        );
       });
       const transControllerZ = translation.add(
         options,
         "translationZ",
-        -10,
-        10
+        -100,
+        100
       );
       transControllerZ.onChange(function (value) {
-        gltfMarker.setTranslation([
+        gltfMarker.setTranslation(
           transControllerX.getValue(),
           transControllerY.getValue(),
           value,
-        ]);
+        );
       });
 
       const rotation = gui.addFolder("rotation");
@@ -168,11 +168,11 @@
         90
       );
       rotationControllerAxisX.onChange(function (value) {
-        gltfMarker.setRotation([
+        gltfMarker.setRotation(
           rotationControllerAxisX.getValue(),
           rotationControllerAxisY.getValue(),
           rotationControllerAxisZ.getValue(),
-        ]);
+        );
       });
       const rotationControllerAxisY = rotation.add(
         options,
@@ -181,11 +181,11 @@
         90
       );
       rotationControllerAxisY.onChange(function (value) {
-        gltfMarker.setRotation([
+        gltfMarker.setRotation(
           rotationControllerAxisX.getValue(),
           rotationControllerAxisY.getValue(),
           rotationControllerAxisZ.getValue(),
-        ]);
+        );
       });
       const rotationControllerAxisZ = rotation.add(
         options,
@@ -194,38 +194,38 @@
         90
       );
       rotationControllerAxisZ.onChange(function (value) {
-        gltfMarker.setRotation([
+        gltfMarker.setRotation(
           rotationControllerAxisX.getValue(),
           rotationControllerAxisY.getValue(),
           rotationControllerAxisZ.getValue(),
-        ]);
+        );
       });
 
       const scale = gui.addFolder("scale");
       scale.open();
       const scaleControllerX = scale.add(options, "scaleX", 0.1, 20);
       scaleControllerX.onChange(function (value) {
-        gltfMarker.setScale([
+        gltfMarker.setScale(
           value,
           scaleControllerY.getValue(),
           scaleControllerZ.getValue(),
-        ]);
+        );
       });
       const scaleControllerY = scale.add(options, "scaleY", 0.1, 20);
       scaleControllerY.onChange(function (value) {
-        gltfMarker.setScale([
+        gltfMarker.setScale(
           scaleControllerX.getValue(),
           value,
           scaleControllerZ.getValue(),
-        ]);
+        );
       });
       const scaleControllerZ = scale.add(options, "scaleZ", 0.1, 20);
       scaleControllerZ.onChange(function (value) {
-        gltfMarker.setScale([
+        gltfMarker.setScale(
           scaleControllerX.getValue(),
           scaleControllerY.getValue(),
           value,
-        ]);
+        );
       });
     </script>
   </body>
