--- a/resources/codes/gltfLayer/layer/gltfCoordinateSystem.html
+++ b/resources/codes/gltfLayer/layer/gltfCoordinateSystem.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>更新模型的ModelMatrix</title>
+    <title>gltflayer坐标系统</title>
     <style type="text/css">
       html,
       body {
@@ -13,28 +13,6 @@
       .container {
         width: 100%;
         height: 100%;
-      }
-
-      .pane {
-        position: absolute;
-        top: 20px;
-        right: 20px;
-        line-height: 25px;
-        z-index: 10;
-      }
-
-      .pane a {
-        display: block;
-        float: left;
-        text-align: left;
-        margin-left: 6px;
-        padding: 0 10px;
-        min-width: 28px;
-        min-height: 25px;
-        color: #000;
-        text-decoration: none;
-        background: #efefef;
-        border: 1px solid #000;
       }
     </style>
     <link
@@ -57,9 +35,6 @@
 
   <body>
     <div id="map" class="container"></div>
-    <div class="pane">
-      <a href="javascript:setModelMatrix();">更新模型的ModelMatrix</a>
-    </div>
     <script>
       const map = new maptalks.Map("map", {
         center: [-0.113049, 51.498568],
@@ -80,6 +55,7 @@
             direction: [1, -0.4, -1],
           },
         },
+        zoomControl: true
       });
 
       const sceneConfig = {
@@ -106,28 +82,41 @@
           },
         },
       };
-      const url = "/resources/gltf/alien/alien.glb";
+      const gui = new dat.GUI({ width: 250 });
+      const Config = function () {
+        this.animation = true;
+        this.loop = true;
+        this.coordinateSystemList = "map";
+      };
+      const options = new Config();
+      const url = "/resources/gltf/teapot/teapot.gltf";
       const symbol = {
-        url: url,
-        scale: [2, 2, 2],
+        url: url
       };
 
-      const gltfLayer = new maptalks.GLTFLayer("gltf");
+      const gltfLayer = new maptalks.GLTFLayer("gltf", {
+        gltfCoordinateSystem: 'map'//分为map和gltf两种, map为地图坐标系统，会给模型尺寸位置做自适应。gltf为模型内部坐标系统，按真实大小渲染
+      });
       const position = map.getCenter();
       const gltfMarker = new maptalks.GLTFMarker(position, {
-        symbol: symbol,
-      });
+        symbol,
+      }).addTo(gltfLayer);
 
-      gltfLayer.addGeometry(gltfMarker);
       const groupGLLayer = new maptalks.GroupGLLayer("gl", [gltfLayer], {
         sceneConfig,
       }).addTo(map);
-      function setModelMatrix() {
-        const translation = [50, 50, 50];
-        const rotation = [45, 0, 0];
-        const scale = [2, 2, 2];
-        gltfMarker.setTRS(translation, rotation, scale);
-      }
+
+      const coordinateSystemListControl = gui
+        .add(options, "coordinateSystemList", ["map", "gltf"])
+        .name("coordinate list");
+      coordinateSystemListControl.onChange(function (value) {
+        gltfLayer.setGltfCoordinateSystem(value);
+        if (value === 'gltf') {
+            map.animateTo({ center: [-0.11294, 51.4987], zoom: 20});
+        } else {
+            map.animateTo({ center: [-0.113049, 51.498568], zoom: 14});
+        }
+      });
     </script>
   </body>
 </html>
